feat: add custom css for header stories

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,33 @@
   Storybook will inject this into the html-head at build time
 -->
 <meta name="components-version" content="%STORYBOOK_COMPONENTS_VERSION%" />
+
+<style>
+  /* Classes used for the custom sbb-header story. */
+  .sbb-header__spacer {
+    display: none;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .sbb-header__spacer {
+      display: flex;
+      flex-grow: 1;
+    }
+  }
+
+  .sbb-header-action__last-element {
+    display: none;
+  }
+
+  @media screen and (min-width: 840px) {
+    .sbb-header-action__last-element {
+      display: block;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .sbb-header-action__last-element {
+      margin-inline-end: var(--sbb-spacing-responsive-s);
+    }
+  }
+</style>
