docs: improve readme and style

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,27 +5,27 @@
 
 <style>
   /* Classes used for the custom sbb-header story. */
-  .sbb-header__spacer {
+  .spacer {
     display: none;
   }
 
-  .sbb-header-action__last-element {
+  .last-element {
     display: none;
   }
 
   @media screen and (min-width: 840px) {
-    .sbb-header-action__last-element {
+    .last-element {
       display: block;
     }
   }
 
   @media screen and (min-width: 1024px) {
-    .sbb-header__spacer {
+    .spacer {
       display: flex;
       flex-grow: 1;
     }
 
-    .sbb-header-action__last-element {
+    .last-element {
       margin-inline-end: var(--sbb-spacing-responsive-s);
     }
   }
